JoinComputerToGroup Handler, swagger re spec
