# adapter/restapi/endpoints/operations/backup/initialize_group_backup_parameters.go
@@ -6,12 +6,18 @@ package backup
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"context"
+	"io"
 	"net/http"
 
 	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	"mnimidamonbackend/adapter/restapi/modelapi"
 )
 
 // NewInitializeGroupBackupParams creates a new InitializeGroupBackupParams object
@@ -31,6 +37,11 @@ type InitializeGroupBackupParams struct {
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
+	/*
+	  Required: true
+	  In: body
+	*/
+	Body *modelapi.InitializeGroupBackupPayload
 	/*Numeric ID of the Group.
 	  Required: true
 	  In: path
@@ -46,6 +57,34 @@ func (o *InitializeGroupBackupParams) BindRequest(r *http.Request, route *middle
 	var res []error
 
 	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body modelapi.InitializeGroupBackupPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(context.Background())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
 
 	rGroupID, rhkGroupID, _ := route.Params.GetOK("group_id")
 	if err := o.bindGroupID(rGroupID, rhkGroupID, route.Formats); err != nil {
